# advent23

./: .gitattributes  README.md  advent23.cabal  advent23.prof  dev.yml  flake.nix  hie.yaml  justfile
.github/workflows/: ci.yaml
dayone/: DayOne.hs  DayThree.hs  DayTwo.hs  Main.hs
days/: DayEight.hs  DayFive.hs  DayFour.hs  DayNine.hs  DayOne.hs  DaySeven.hs  DaySix.hs  DayTen.hs  DayThree.hs  DayTwo.hs  Lib.hs  Main.hs
days/Lib/: Grid.hs
src/: Main.hs
src/inputs/: calcs.txt
tests/: DayEightSpec.hs  DayFiveSpec.hs  DayFourSpec.hs  DayNineSpec.hs  DaySevenSpec.hs  DaySixSpec.hs  DayTenSpec.hs  DayThreeSpec.hs  Spec.hs
tests/inputs/: day5-medium.txt
