cabal-version:      2.4
name:               advent23
version:            0.1.0.0
license:            MIT
copyright:          eat my butt
maintainer:         idk
author:             idk
category:           kata
homepage:           https://example.org

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           Advent of code 2023

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files: README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , with-utf8

  -- hs-source-dirs:     src
  default-language:   Haskell2010

executable advent23
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    , days-lib
    , parsec

library days-lib
  import:          shared
  hs-source-dirs:  days
  exposed-modules:
    DayFive
    DayFour
    DayOne
    DaySix
    DayThree
    DayTwo

  build-depends:
    , parallel
    , parsec
    , parsec3-numbers

test-suite tests
  import:         shared
  type:           exitcode-stdio-1.0
  other-modules:
    DayFiveSpec
    DayFourSpec
    DaySixSpec
    DayThreeSpec

  -- type:             detailed-0.9
  -- test-module:      Spec
  build-depends:
    , days-lib
    , either
    , hedgehog
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck

  hs-source-dirs: tests
  main-is:        Spec.hs
